--- a/SmtpMail/SmtpMail.csproj
+++ b/SmtpMail/SmtpMail.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>CursoAspnet.SmtpMail</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
